--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
         <meta charset="UTF-8">
 
         <style>
-            table {
+            table.style2 {
+                border: 1px solid black;
+                width: 100%;
+                height: 100%;
+            }
+            table.style2 tr{
+                border: 1px solid black;
+            }
+            table.style2 td{
+                border: 1px solid black;
+            }
+            table.style1 {
                 width: 100%;
                 height: 100%;
             }
@@ -21,7 +32,7 @@
         </style>
     </head>
     <body>
-        <table>
+        <table class="style1">
             <tr>
                 <td>
                     <div>
@@ -30,7 +41,7 @@
                 </td>
                 <td>
                     <div>
-                        <label>Parsed code here</label>
+                        <label>Parsed Code Table Here</label>
                     </div>
                 </td>
             </tr>
@@ -42,7 +53,10 @@
                 </td>
                 <td>
                     <div class="textAreaWrapper">
-                        <textarea id="parsedCode" title="Parse code"></textarea>
+                        <table class= "style2">
+                            <thead style=" font-weight: bold" id="header"></thead>
+                            <tbody id="tbody"></tbody>
+                        </table>
                     </div>
                 </td>
             </tr>
